--- a/package.json
+++ b/package.json
@@ -18,8 +18,11 @@
     "@angular/platform-browser": "~13.0.0",
     "@angular/platform-browser-dynamic": "~13.0.0",
     "@angular/router": "~13.0.0",
+    "@googlemaps/js-api-loader": "^1.15.1",
     "bootstrap": "^5.2.3",
+    "bootstrap-icons": "^1.10.3",
     "rxjs": "~7.4.0",
+    "sweetalert2": "^11.6.16",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
@@ -27,6 +30,7 @@
     "@angular-devkit/build-angular": "~13.0.4",
     "@angular/cli": "~13.0.4",
     "@angular/compiler-cli": "~13.0.0",
+    "@types/google.maps": "^3.51.0",
     "@types/jasmine": "~3.10.0",
     "@types/node": "^12.11.1",
     "jasmine-core": "~3.10.0",
