--- a/package.json
+++ b/package.json
@@ -24,12 +24,12 @@
     "bootstrap": "^5.2.3",
     "bootstrap-icons": "^1.10.3",
     "rxjs": "~7.4.0",
-    "sweetalert2": "^11.6.16",
+    "sweetalert2": "^11.4.8",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~13.0.4",
+    "@angular-devkit/build-angular": "^13.3.10",
     "@angular/cli": "~13.0.4",
     "@angular/compiler-cli": "~13.0.0",
     "@types/google.maps": "^3.51.0",
