--- a/package.json
+++ b/package.json
@@ -16,13 +16,15 @@
     "@angular/compiler": "^15.1.0",
     "@angular/core": "^15.1.0",
     "@angular/forms": "^15.1.0",
-    "@angular/material": "^13.3.9",
+    "@angular/material": "^14.2.7",
     "@angular/platform-browser": "^15.1.0",
     "@angular/platform-browser-dynamic": "^15.1.0",
     "@angular/router": "^15.1.0",
     "@googlemaps/js-api-loader": "^1.15.1",
     "bootstrap": "^5.2.3",
     "bootstrap-icons": "^1.10.3",
+    "ngx-mask": "^15.0.2",
+    "ngx-number-format": "^15.0.0",
     "rxjs": "~7.4.0",
     "sweetalert2": "^11.4.8",
     "tslib": "^2.3.0",
