--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@googlemaps/js-api-loader": "^1.15.1",
     "bootstrap": "^5.2.3",
     "bootstrap-icons": "^1.10.3",
+    "font-awesome": "^4.7.0",
     "ngx-mask": "^12.0.0",
     "ngx-number-format": "^15.0.0",
     "rxjs": "~7.4.0",
